--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "licenseFilename": "LICENSE",
   "readmeFilename": "README.md",
   "peerDependencies": {
-    "react": "^17.0.2",
+    "react": ">=17.0.2 <19.0.x",
     "react-native": ">=0.60.0 <1.0.x"
   },
   "devDependencies": {
